[DDW-861] Review: Fix horizontal scroll

--- a/source/renderer/app/components/wallet/tokens/wallet-token-picker/WalletTokenPicker.scss
+++ b/source/renderer/app/components/wallet/tokens/wallet-token-picker/WalletTokenPicker.scss
@@ -121,7 +121,7 @@
 }
 
 .dialog {
-  overflow-y: hidden;
+  overflow: hidden;
 
   :global {
     .Dialog_contentWrapper {
